k8s/deployment.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.app.ns
  labels:
    app: #@ data.values.app.name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: #@ data.values.app.name
  template:
    metadata:
      labels:
        app: #@ data.values.app.name
    spec:
      containers:
      - name: #@ data.values.app.name
        image: #@ data.values.app.image
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 3
